# 2110452_HPA

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile
docker/assignment/: Dockerfile
docker/exam/: .dockerignore  Dockerfile  main.cpp
docker/init/: Dockerfile  main.py
k8s/: nginx.yaml
python/: pyproject.toml
python/hpa/: vectorization.py
src/: CMakeLists.txt  neon_add.cpp  scalar_add.cpp
src/cmd/: openmp.cpp  threading.cpp  vectorization.cpp
src/include/: neon_add.h  scalar_add.h
