[project]
name = "hpa"
version = "0.1.0"
description = ""
authors = [{ name = "Thanapat Chotipun", email = "devpatrick.cho@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = ["numpy (>=2.2.2,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
